Finish user edit, update, index, and destroy actions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
 		<%= render 'layouts/footer' %>
 		<%= debug(params) if Rails.env.development? %>
 		<%= if Rails.env.development?
-			#debug(self.instance_variables)
-			debug(self.instance_values)
+			debug(self.instance_variables)
+			#debug(self.instance_values)
 			#self.instance_variables.each do |variable|
 			#	debug(variable)
 			#end
